# animal_data_analysis_tools

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
datasets/: README.md  SP_2024_01_01_to_2024_01_03.csv  weather_data.csv
exploratory_code/: Weather_Data_Crawler.py
gps_accuracy_analysis/: gps_device_accuracy_analysis.py
gps_data_analysis/: geo_utils.py  gps_utils.py  main.py
scripts/: example.py  generate_gps_accuracy_report.py  generate_gps_accuracy_report_md.py  run_web.py  wa_dpird_weather_downloader.py
src/animal_data_analysis_tools/: __init__.py  __main__.py
src/wa_weather_station_tool/: __init__.py  __main__.py  cli.py  downloader.py
src/wa_weather_station_web/: __init__.py  app.py
src/wa_weather_station_web/templates/: admin.html  index.html  submitted.html
tests/: test_basic.py
